<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_user">

    <Button
        android:id="@+id/btnSearch_MU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnView_MU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnViewAppointment"
        app:layout_constraintStart_toStartOf="@+id/btnBook_MU"
        app:layout_constraintTop_toBottomOf="@+id/btnBook_MU" />

    <Button
        android:id="@+id/btnViewService_MU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/btnVService"
        app:layout_constraintStart_toStartOf="@+id/btnView_MU"
        app:layout_constraintTop_toBottomOf="@+id/btnView_MU" />

    <Button
        android:id="@+id/btnViewEdit_MU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/btnViewEdit"
        app:layout_constraintStart_toStartOf="@+id/btnViewService_MU"
        app:layout_constraintTop_toBottomOf="@+id/btnViewService_MU" />

    <Button
        android:id="@+id/btnLogout_MU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/btnLogout_User"
        app:layout_constraintStart_toStartOf="@+id/btnViewEdit_MU"
        app:layout_constraintTop_toBottomOf="@+id/btnViewEdit_MU" />

    <Button
        android:id="@+id/btnBook_MU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnBook"
        app:layout_constraintStart_toStartOf="@+id/btnSearch_MU"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch_MU" />

</androidx.constraintlayout.widget.ConstraintLayout>