<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".enterLogin_user">

    <TextView
        android:id="@+id/title_ELI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="79dp"
        android:text="@string/title_ELI"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/inputUser_ELI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin_ELI"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="71dp"
        android:text="@string/btn1_ELI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel_ELI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword_ELI" />

    <Button
        android:id="@+id/btnCancel_ELI"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="91dp"
        android:text="@string/btn2_ELI"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnLogin_ELI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogin_ELI" />

    <EditText
        android:id="@+id/inputUser_ELI"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/hintUser_ELI"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword_ELI"
        app:layout_constraintEnd_toEndOf="@+id/title_ELI"
        app:layout_constraintStart_toStartOf="@+id/inputPassword_ELI"
        app:layout_constraintTop_toBottomOf="@+id/title_ELI" />

    <EditText
        android:id="@+id/inputPassword_ELI"
        android:layout_width="249dp"
        android:layout_height="0dp"
        android:layout_marginBottom="119dp"
        android:ems="10"
        android:hint="@string/hintPass_ELI"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin_ELI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUser_ELI" />

</androidx.constraintlayout.widget.ConstraintLayout>