<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchOrBookUser">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/providerList"
        android:layout_width="267dp"
        android:layout_height="294dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_SBU" />

    <Button
        android:id="@+id/btnBook_SBU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginBottom="25dp"
        android:text="@string/book_SOBU"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_SBU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="28dp"
        android:text="@string/title_SOBU"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="271dp"
        android:layout_height="101dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBook_SBU"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radiobtnPickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rdPick" />

        <RadioButton
            android:id="@+id/radiobtnDropoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdDrop" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>